fix(ButtonGroup): Add back position to fix z-index issue (#422)
Added position: relative to child selector to fix the issue in storybook. Previously it was set on hover/focus/disabled states but now it's always set regardless, and it seems to fix the issue in Chrome 96

--- a/src/button/button-group.scss
+++ b/src/button/button-group.scss
@@ -13,6 +13,8 @@
     display: flex;
 
     #{$childSelector} {
+      position: relative;
+
       &:hover {
         z-index: 1;
       }
